--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "next": "14.2.0",
     "react": "^18",
     "react-dom": "^18",
     "next-auth": "^4.24.7",
+    "@auth/prisma-adapter": "^1.6.0",
+    "@prisma/client": "^5.13.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.363.0",
     "clsx": "^2.1.0"
@@ -26,6 +29,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.0"
+    "eslint-config-next": "14.2.0",
+    "prisma": "^5.13.0"
   }
 }
